# Product_sale_service

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  env.sample  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
migration/: env.py
migration/versions/: 2024_10_15_1504-e682e82d5e2f_initial_migration.py
src/: config.py  crud.py  exceptions.py  main.py  models.py
src/product_service/: models.py  utils.py
src/product_service/crud/: cart.py  cartitem.py  product.py
src/product_service/routers/: cart.py  cartitem.py  product.py
src/product_service/schemas/: cart.py  cartitem.py  product.py
src/users/: auth.py  crud.py  dependencies.py  models.py  router.py  schemas.py
tests/: conftest.py  fixture.json  test_main.py  utils.py
